Change logo format and revise about section text
Updated company logo image format and enhanced the about section description.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="site-header">
-    <img src="images/logo.png" alt="NeatNest LLC logo" class="logo" />
+    <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
     <div class="title">
       <h1>NeatNest LLC</h1>
       <p>We keep the neatest nests!</p>
@@ -19,7 +19,7 @@
   <main>
     <section id="about" class="section">
       <h2>A little bit about us…</h2>
-      <p>Friendly, reliable cleaning in Wallingford, Durham, and North Haven. Flexible scheduling, fair pricing, and spotless results.</p>
+      <p>We are a small, family-owned house cleaning company dedicated to providing reliable, affordable, and detail-oriented cleaning services. Our team specializes in routine housekeeping, deep cleaning, move-in/move-out cleaning, and carpet care for homes and apartments. With a focus on trust, quality, and customer satisfaction, we make it easy to enjoy a cleaner, healthier home. Serving local families and businesses, we take pride in treating every home like our own.</p>
     </section>
 
     <section id="services" class="section">
