Update company description in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
     <div class="title">
       <h1>NeatNest LLC</h1>
-      <p>We keep the neatest nests!</p>
+      <p>Family-owned and operated cleaning company in Wallingford, CT — providing reliable cleaning services for homes and businesses across the community.</p>
     </div>
     <a class="call-btn" href="tel:+12035550123">Call Now</a>
   </header>
