Updated header structure in index.html to center logo above h1 and move call button below title phrase.

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
   <header class="site-header">
-    <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
-    <div class="title">
+    <div style="text-align: center;">
+      <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
       <h1>NeatNest LLC</h1>
-      <p>Family-owned and operated cleaning company in Wallingford, CT — providing reliable cleaning services for homes and businesses across the community.</p>
     </div>
+    <p>Family-owned and operated cleaning company in Wallingford, CT — providing reliable cleaning services for homes and businesses across the community.</p>
     <a class="call-btn" href="tel:+12035550123">Call Now</a>
   </header>
 
   <main>
     <section id="about" class="section">
       <h2>A little bit about us…</h2>
-      <p>We are a small, family-owned house cleaning company dedicated to providing reliable, affordable, and detail-oriented cleaning services. Our team specializes in routine housekeeping, deep cleaning, and move-in/move-out services. We take pride in our work and treat every home as if it were our own, ensuring that you can relax in a spotless, comfortable environment.</p>
+      <p>We are a small, family-owned house cleaning company dedicated to providing reliable, affordable, and detail-oriented cleaning services. Our team specializes in routine housekeeping, deep cleaning, and move-in/move-out services. Whether you need weekly maintenance or a one-time deep clean, we work around your schedule to keep your space spotless.</p>
     </section>
 
     <section id="services" class="section">
@@ -70,7 +70,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Routine Housekeeping</h3>
-      <p>Our regular housekeeping service includes weekly or bi-weekly cleaning of all main living areas. We'll dust surfaces, vacuum carpets and rugs, mop floors, clean bathrooms thoroughly, sanitize kitchen counters and appliances, and make beds. This service is perfect for maintaining a consistently clean and comfortable home environment.</p>
+      <p>Our regular housekeeping service includes weekly or bi-weekly cleaning of all main living areas. We'll dust surfaces, vacuum carpets and rugs, mop floors, clean bathrooms thoroughly, sanitize kitchen areas, and tidy up common spaces. Perfect for maintaining a consistently clean home without the hassle.</p>
     </div>
   </div>
 
@@ -78,7 +78,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Top-to-Bottom Deep Clean</h3>
-      <p>Our comprehensive deep cleaning service goes beyond regular housekeeping. We clean baseboards, window sills, light fixtures, ceiling fans, inside appliances (oven, refrigerator, microwave), detailed bathroom cleaning including grout, thorough kitchen deep clean, and all areas that are often overlooked in routine cleaning.</p>
+      <p>Our comprehensive deep cleaning service goes beyond regular housekeeping. We clean baseboards, window sills, light fixtures, ceiling fans, inside appliances (oven, refrigerator, microwave), cabinet fronts, and all hard-to-reach areas. Ideal for spring cleaning, special occasions, or preparing your home for guests.</p>
     </div>
   </div>
 
@@ -86,7 +86,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Move-In / Move-Out Clean</h3>
-      <p>Perfect for moving transitions, this service ensures your new home is spotless before you move in, or your old home is pristine for the next occupants. Includes deep cleaning of all rooms, inside cabinets and drawers, appliance cleaning, detailed bathroom sanitization, and thorough kitchen deep clean.</p>
+      <p>Perfect for moving transitions, this service ensures your new home is spotless before you move in, or your old home is pristine for the next occupants. Includes deep cleaning of all rooms, inside cabinets and drawers, appliance cleaning, and thorough sanitization throughout the entire property.</p>
     </div>
   </div>
 
@@ -94,7 +94,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Office & Commercial Cleaning</h3>
-      <p>Professional cleaning services for offices, retail spaces, and commercial buildings. We offer flexible scheduling including after-hours cleaning, desk and workspace sanitization, restroom maintenance, floor care, trash removal, and common area cleaning. Custom cleaning plans available to meet your business needs.</p>
+      <p>Professional cleaning services for offices, retail spaces, and commercial buildings. We offer flexible scheduling including after-hours cleaning, desk and workspace sanitization, restroom maintenance, lobby and common area cleaning, and trash removal. Customizable packages to fit your business needs.</p>
     </div>
   </div>
 
@@ -102,7 +102,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Carpet & Upholstery Cleaning</h3>
-      <p>Professional steam cleaning for carpets, rugs, and upholstered furniture. Our service includes stain removal, odor treatment, fabric protection application, and deep extraction cleaning that removes embedded dirt and allergens. We use eco-friendly cleaning solutions that are safe for pets and children.</p>
+      <p>Professional steam cleaning for carpets, rugs, and upholstered furniture. Our service includes stain removal, odor treatment, fabric protection application, and deep extraction cleaning that removes embedded dirt and allergens. We use eco-friendly solutions safe for pets and children.</p>
     </div>
   </div>
 
