--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <section id="testimonials" class="section">
       <h2>What people say</h2>
       <div class="slider">
-        <div class="slide active">"Showed up on time and did an amazing job." — J.S.</div>
-        <div class="slide">"My house hasn't looked this good in years." — M.R.</div>
-        <div class="slide">"Professional, fast, and friendly." — K.K.</div>
+        <div class="slide active">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for a 5 star service. Highly recommend :)" — Julie N.</div>
+        <div class="slide">"Mike and his crew are a pleasure to have in our home. The company is run in a businesslike way, with Mike being very professional. They are reliable, friendly, and trustworthy." — Frances P.</div>
+        <div class="slide">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!" — Nicki B.</div>
       </div>
       <div class="slider-controls">
         <button id="prev">◀</button>
