--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
     <section id="about" class="section">
       <h2>A little bit about us…</h2>
-      <p>We are a small, family-owned house cleaning company dedicated to providing reliable, affordable, and detail-oriented cleaning services. Our team specializes in routine housekeeping, deep cleaning, and commercial cleaning services throughout Wallingford and surrounding communities.</p>
+      <p>We are a small, family-owned house cleaning company dedicated to providing reliable, affordable, and detail-oriented cleaning services. Our team specializes in routine housekeeping, deep cleaning, move-in/move-out cleaning, and commercial cleaning services. With years of experience in the industry, we pride ourselves on our attention to detail and commitment to customer satisfaction.</p>
     </section>
 
     <section id="services" class="section">
@@ -34,8 +34,8 @@
     <section id="testimonials" class="section">
       <h2>What people say</h2>
       <div class="slider">
-        <div class="slide active">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for the quality of work. They are now my regular cleaning service!" — Sarah K.</div>
-        <div class="slide">"Mike and his crew are a pleasure to have in our home. The company is run in a businesslike way, with Mike being very professional. They are reliable, friendly, and trustworthy." — Jennifer M.</div>
+        <div class="slide active">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!" — Sarah M.</div>
+        <div class="slide">"Mike and his crew are a pleasure to have in our home. The company is run in a businesslike way, with Mike being very professional. They are reliable, friendly, and trustworthy." — Jennifer L.</div>
         <div class="slide">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!" — Nicki B.</div>
       </div>
       <div class="slider-controls">
@@ -68,7 +68,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Routine Housekeeping</h3>
-      <p>Our regular housekeeping service includes weekly or bi-weekly cleaning of all main living areas. We'll dust surfaces, vacuum carpets and rugs, mop floors, clean bathrooms thoroughly, sanitize kitchen areas, and maintain your home's overall cleanliness with consistent, reliable service.</p>
+      <p>Our regular housekeeping service includes weekly or bi-weekly cleaning of all main living areas. We'll dust surfaces, vacuum carpets and rugs, mop floors, clean bathrooms thoroughly, sanitize kitchen surfaces, and take out trash. Perfect for maintaining a clean and healthy home environment.</p>
     </div>
   </div>
 
@@ -76,7 +76,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Top-to-Bottom Deep Clean</h3>
-      <p>Our comprehensive deep cleaning service goes beyond regular housekeeping. We clean baseboards, window sills, light fixtures, ceiling fans, inside appliances (oven, refrigerator, microwave), scrub grout and tile, wipe down walls, and tackle those hard-to-reach areas that accumulate dirt over time.</p>
+      <p>Our comprehensive deep cleaning service goes beyond regular housekeeping. We clean baseboards, window sills, light fixtures, ceiling fans, inside appliances (oven, refrigerator, microwave), scrub tile grout, wash walls, and clean inside cabinets and drawers. Ideal for seasonal cleaning or preparing for special events.</p>
     </div>
   </div>
 
@@ -84,7 +84,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Move-In / Move-Out Clean</h3>
-      <p>Perfect for moving transitions, this service ensures your new home is spotless before you move in, or your old home is pristine for the next occupants. Includes deep cleaning of all rooms, cabinets, appliances, bathrooms, and removing any residue left behind.</p>
+      <p>Perfect for moving transitions, this service ensures your new home is spotless before you move in, or your old home is pristine for the next occupants. Includes deep cleaning of all rooms, inside and outside of all appliances, cabinets, closets, and thorough sanitization.</p>
     </div>
   </div>
 
@@ -92,7 +92,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Office & Commercial Cleaning</h3>
-      <p>Professional cleaning services for offices, retail spaces, and commercial buildings. We offer flexible scheduling including after-hours cleaning, desk and workspace sanitization, restroom maintenance, floor care, and common area cleaning to maintain a professional environment.</p>
+      <p>Professional cleaning services for offices, retail spaces, and commercial buildings. We offer flexible scheduling including after-hours cleaning, desk and workspace sanitization, restroom maintenance, floor care, and common area cleaning to keep your business environment clean and professional.</p>
     </div>
   </div>
 
@@ -100,7 +100,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h3>Carpet & Upholstery Cleaning</h3>
-      <p>Professional steam cleaning for carpets, rugs, and upholstered furniture. Our service includes stain removal, odor treatment, fabric protection application, and deep extraction cleaning that removes embedded dirt, allergens, and bacteria for a healthier living environment.</p>
+      <p>Professional steam cleaning for carpets, rugs, and upholstered furniture. Our service includes stain removal, odor treatment, fabric protection application, and deep extraction cleaning that removes dirt, allergens, and bacteria from deep within fibers.</p>
     </div>
   </div>
 
