--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="google-site-verification" content="mnmC5PS4lYmcLw-1vwb80J6D3rb3r5V0vBiByU0r0yc" />
   <title>NeatNest LLC — We keep the neatest nests!</title>
   <link rel="stylesheet" href="style.css" />
+
+    <link rel="canonical" href="https://neatnestllc.com/" />
 </head>
 <body>
   <header class="site-header">
