--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="google-site-verification" content="mnmC5PS4lYmcLw-1vwb80J6D3rb3r5V0vBiByU0r0yc" />
   <meta name="description" content="Family-owned cleaning company in Wallingford, CT. Deep cleans, routine housekeeping, move-in/move-out, office cleaning, and carpet & upholstery." />
+ 
+  <meta property="og:title" content="NeatNest LLC — We keep the neatest nests!" />
+  <meta property="og:description" content="Family-owned cleaning company in Wallingford, CT. Deep cleans, routine housekeeping, move-in/move-out, office cleaning, and carpet & upholstery." />
+  <meta property="og:image" content="https://neatnestllc.com/images/logo.jpg" />
+  <meta property="og:url" content="https://neatnestllc.com/" />
+  <meta property="og:type" content="website" />
   <title>NeatNest LLC — We keep the neatest nests!</title>
   <link rel="stylesheet" href="style.css" />
 
