--- a/index.html
+++ b/index.html
@@ -29,16 +29,31 @@
       <p>We are a small, family-owned house cleaning company dedicated to providing reliable, affordable, and detail-oriented cleaning services. Our team specializes in routine housekeeping, deep cleaning, move-in/move-out cleaning, and commercial cleaning services. With years of experience in the industry, we pride ourselves on our attention to detail and commitment to customer satisfaction.</p>
     </section>
 
-    <section id="services" class="section">
-      <h2>Services</h2>
-      <ul class="services">
-        <li data-service="routine">Routine Housekeeping</li>
-        <li data-service="deep">Top-to-Bottom Deep Clean</li>
-        <li data-service="move">Move-In / Move-Out Clean</li>
-        <li data-service="office">Office & Commercial Cleaning</li>
-        <li data-service="carpet">Carpet & Upholstery Cleaning</li>
-      </ul>
-    </section>
+<section id="services" class="section">
+  <h2>Services</h2>
+  <ul class="services">
+    <li data-service="routine">
+      <img class="service-logo" src="images/service-logo-bottle.png" alt="Routine Housekeeping icon" width="60" height="60">
+      Routine Housekeeping
+    </li>
+    <li data-service="deep">
+      <img class="service-logo" src="images/service-logo-mop.png" alt="Deep Clean icon" width="60" height="60">
+      Top-to-Bottom Deep Clean
+    </li>
+    <li data-service="move">
+      <img class="service-logo" src="images/service-logo-movein.png" alt="Move-In / Move-Out icon" width="60" height="60">
+      Move-In / Move-Out Clean
+    </li>
+    <li data-service="office">
+      <img class="service-logo" src="images/service-logo-office.png" alt="Office Cleaning icon" width="60" height="60">
+      Office & Commercial Cleaning
+    </li>
+    <li data-service="carpet">
+      <img class="service-logo" src="images/service-logo-chair.png" alt="Carpet & Upholstery Cleaning icon" width="60" height="60">
+      Carpet & Upholstery Cleaning
+    </li>
+  </ul>
+</section>
 
     <section id="testimonials" class="section">
       <h2>What people say</h2>
