--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
   <div id="deep-modal" class="modal">
     <div class="modal-content">
+      <img src="images/service-logo-mop.png" alt="Move In / Move Out Icon" class="service-logo">
       <h3>Top-to-Bottom Deep Clean</h3>
       <p>Our comprehensive deep cleaning service goes beyond regular housekeeping. We clean baseboards, window sills, light fixtures, ceiling fans, inside appliances (oven, refrigerator, microwave), scrub tile grout, wash walls, and clean inside cabinets and drawers. Ideal for seasonal cleaning or preparing for special events.</p>
       <span class="close">&times;</span>
@@ -107,6 +108,7 @@
 
   <div id="move-modal" class="modal">
     <div class="modal-content">
+      <img src="images/service-logo-movein.png" alt="Move In / Move Out Icon" class="service-logo">
       <h3>Move-In / Move-Out Clean</h3>
       <p>Perfect for moving transitions, this service ensures your new home is spotless before you move in, or your old home is pristine for the next occupants. Includes deep cleaning of all rooms, inside and outside of all appliances, cabinets, closets, and thorough sanitization.</p>
       <span class="close">&times;</span>
@@ -115,6 +117,7 @@
 
   <div id="office-modal" class="modal">
     <div class="modal-content">
+      <img src="images/service-logo-office.png" alt="Move In / Move Out Icon" class="service-logo">
       <h3>Office & Commercial Cleaning</h3>
       <p>Professional cleaning services for offices, retail spaces, and commercial buildings. We offer flexible scheduling including after-hours cleaning, desk and workspace sanitization, restroom maintenance, floor care, and common area cleaning to keep your business environment clean and professional.</p>
       <span class="close">&times;</span>
@@ -123,6 +126,7 @@
 
   <div id="carpet-modal" class="modal">
     <div class="modal-content">
+      <img src="images/service-logo-chair.png" alt="Move In / Move Out Icon" class="service-logo">
       <h3>Carpet & Upholstery Cleaning</h3>
       <p>Professional steam cleaning for carpets, rugs, and upholstered furniture. Our service includes stain removal, odor treatment, fabric protection application, and deep extraction cleaning that removes dirt, allergens, and bacteria from deep within fibers.</p>
       <span class="close">&times;</span>
