Add social media links to the header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 </head>
 <body>
   <header class="site-header">
+    <div class="social-links">
+      <a href="https://www.facebook.com/neatnestct" target="_blank" aria-label="Facebook">
+        <img src="images/facebook.svg" alt="Facebook logo" />
+      </a>
+      <a href="https://www.instagram.com/neatnestct" target="_blank" aria-label="Instagram">
+        <img src="images/instagram.svg" alt="Instagram logo" />
+      </a>
+</div>
+
     <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
     <h1>NeatNest LLC</h1>
     <p>Family-owned and operated cleaning company in Wallingford, CT — providing reliable cleaning services for homes and businesses across the community.</p>
