Change section title from 'SERVICES' to 'Our Services'
CHANGED "SERVICES" TO "Our Services"

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
 <section id="services" class="section">
-  <h2>SERVICES</h2>
+  <h2>Our Services</h2>
   <ul class="services">
     <li data-service="routine">
       <img class="service-logo" src="images/service-logo-bottle.png" alt="Routine Housekeeping icon" width="60" height="60">
