Add contact info block to index.html

--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
         </label>
         <button type="submit">Send</button>
       </form>
+              <!-- NEW contact info block -->
+      <div class="contact-info">
+        <p>
+          <a href="tel:+12035009806">(203) 500-9806</a><br>
+          <a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a>
+        </p>
+      </div>
     </section>
   </main>
 
