--- a/index.html
+++ b/index.html
@@ -94,13 +94,14 @@
         <button type="submit">Send</button>
       </form>
               <!-- NEW contact info block -->
-      <div class="contact-info">
-        <p>
-          <a href="tel:+12035009806">(203) 500-9806</a><br>
-          <a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a>
-        </p>
-      </div>
+        <div class="contact-info">
+          <p>
+            Phone: <a href="tel:+12035009806">(203) 500-9806</a><br>
+            Email: <a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a>
+          </p>
+        </div>
     </section>
+  
   </main>
 
   <footer class="site-footer">
