--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://neatnestllc.com/" />
   <meta property="og:type" content="website" />
   <title>NeatNest LLC — We keep the neatest nests!</title>
-  <link rel="icon" href="image/favicon32.png" type="image/x-icon">
+  <link rel="icon" href="images/favicon32.png" type="image/png">
   <link rel="stylesheet" href="style.css" />
 
     <link rel="canonical" href="https://neatnestllc.com/" />
