--- a/index.html
+++ b/index.html
@@ -95,12 +95,22 @@
         <button type="submit">Send</button>
       </form>
               <!-- NEW contact info block -->
-        <div class="contact-info">
-          <p>
-            Phone: <a href="tel:+12035009806">(203) 500-9806</a><br>
-            Email: <a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a>
-          </p>
-        </div>
+       <div class="contact-info">
+              <p>
+                Phone: <a href="tel:+12035009806">(203) 500-9806</a><br>
+                Email: <a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a><br>
+                Hours:
+              </p>
+              <ul>
+                <li>Monday: 7 AM–8 PM</li>
+                <li>Tuesday: 7 AM–8 PM</li>
+                <li>Wednesday: 7 AM–8 PM</li>
+                <li>Thursday: 7 AM–8 PM</li>
+                <li>Friday: 7 AM–8 PM</li>
+                <li>Saturday: 7 AM–8 PM</li>
+                <li>Sunday: 7 AM–8 PM</li>
+              </ul>
+            </div>
     </section>
   
   </main>
