Refactor contact info block for better readability

--- a/index.html
+++ b/index.html
@@ -95,22 +95,19 @@
         <button type="submit">Send</button>
       </form>
               <!-- NEW contact info block -->
-       <div class="contact-info">
-              <p>
-                Phone: <a href="tel:+12035009806">(203) 500-9806</a><br>
-                Email: <a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a><br>
-                Hours:
-              </p>
-              <ul>
-                <li>Monday: 7 AM–8 PM</li>
-                <li>Tuesday: 7 AM–8 PM</li>
-                <li>Wednesday: 7 AM–8 PM</li>
-                <li>Thursday: 7 AM–8 PM</li>
-                <li>Friday: 7 AM–8 PM</li>
-                <li>Saturday: 7 AM–8 PM</li>
-                <li>Sunday: 7 AM–8 PM</li>
-              </ul>
-            </div>
+<div class="contact-info">
+  Phone: <a href="tel:+12035009806">(203) 500-9806</a><br>
+  Email: <a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a><br>
+  Hours:<br>
+  Monday: 7 AM–8 PM<br>
+  Tuesday: 7 AM–8 PM<br>
+  Wednesday: 7 AM–8 PM<br>
+  Thursday: 7 AM–8 PM<br>
+  Friday: 7 AM–8 PM<br>
+  Saturday: 7 AM–8 PM<br>
+  Sunday: 7 AM–8 PM
+</div>
+
     </section>
   
   </main>
