--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
     <h1>NeatNest LLC</h1>
     <p>Family-owned and operated cleaning company in Wallingford, CT — providing reliable cleaning services for homes and businesses across the community.</p>
-    <a class="call-btn" href="tel:+12035009806">Call Now</a>
+    <a class="call-btn" href="tel:+12035007034">CALL NOW</a>
   </header>
 
   <main>
