Update service icons to cartoon representations

--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
   <h2>Our Services</h2>
   <ul class="services">
     <li data-service="routine">
-      <img class="service-logo" src="images/service-logo-bottle.png" alt="Routine Housekeeping icon" width="60" height="60">
+      <img class="service-logo" src="images/service-logo-bottle.png" alt="Cartoon spray bottle" width="60" height="60">
       Routine Housekeeping
     </li>
     <li data-service="deep">
-      <img class="service-logo" src="images/service-logo-mop.png" alt="Deep Clean icon" width="60" height="60">
+      <img class="service-logo" src="images/service-logo-mop.png" alt="Cartoon broom" width="60" height="60">
       Top-to-Bottom Deep Clean
     </li>
     <li data-service="move">
-      <img class="service-logo" src="images/service-logo-movein.png" alt="Move-In / Move-Out icon" width="60" height="60">
+      <img class="service-logo" src="images/service-logo-movein.png" alt="Cartoon home" width="60" height="60">
       Move-In / Move-Out Clean
     </li>
     <li data-service="office">
-      <img class="service-logo" src="images/service-logo-office.png" alt="Office Cleaning icon" width="60" height="60">
+      <img class="service-logo" src="images/service-logo-office.png" alt="Cartoon office building" width="60" height="60">
       Office & Commercial Cleaning
     </li>
     <li data-service="carpet">
-      <img class="service-logo" src="images/service-logo-chair.png" alt="Carpet & Upholstery Cleaning icon" width="60" height="60">
+      <img class="service-logo" src="images/service-logo-chair.png" alt="Cartoon chair and rug" width="60" height="60">
       Carpet & Upholstery Cleaning
     </li>
   </ul>
