--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 
 <section id="services" class="section">
   <h2>Our Services</h2>
+
+  <p>NeatNest LLC provides reliable cleaning services for homes and businesses across Wallingford, Branford, Cheshire, Guilford, East Haven, Middlefield, Durham, Madison, North Haven, and North Branford, CT. Our team specializes in routine housekeeping, top-to-bottom deep cleans, move-in/move-out cleaning, office and commercial cleaning, and carpet & upholstery care. No matter where you are in these communities, we bring attention to detail and a commitment to keeping your space spotless.</p>
+  
   <ul class="services">
     <li data-service="routine">
       <img class="service-logo" src="images/service-logo-bottle.png" alt="Cartoon spray bottle" width="60" height="60">
