Revise company and service descriptions in index.html
Updated the company description and service details for clarity and professionalism.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
     <h1>NeatNest LLC</h1>
-    <p>Family-owned and operated cleaning company in Wallingford, CT — providing reliable cleaning services for homes and businesses across the community.</p>
+    <p>NeatNest LLC is a family-owned cleaning company serving Wallingford and nearby communities. We take pride in delivering reliable, detail-oriented service and ensuring every home or business we clean meets our high standards of care.</p>
     <a class="call-btn" href="tel:+12035007034">CALL NOW</a>
   </header>
 
@@ -52,7 +52,7 @@
 <section id="services" class="section">
   <h2>Our Services</h2>
 
-  <p>NeatNest LLC provides reliable cleaning services for homes and businesses across Wallingford, Branford, Cheshire, Guilford, East Haven, Middlefield, Durham, Madison, North Haven, and North Branford, CT. Our team specializes in routine housekeeping, top-to-bottom deep cleans, move-in/move-out cleaning, office and commercial cleaning, and carpet & upholstery care. No matter where you are in these communities, we bring attention to detail and a commitment to keeping your space spotless.</p>
+  <p>We provide professional cleaning services across Wallingford, Branford, Cheshire, Guilford, East Haven, Middlefield, Durham, Madison, North Haven, and North Branford, CT. Our offerings include routine housekeeping, top-to-bottom deep cleans, move-in/move-out cleaning, office and commercial cleaning, and carpet & upholstery care. No matter where you are in these communities, our team brings attention to detail and a commitment to keeping your space spotless.</p>
   
   <ul class="services">
     <li data-service="routine">
