--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
     <h1>NeatNest LLC</h1>
-    <p>NeatNest LLC is a family-owned cleaning company serving Wallingford and nearby communities. We take pride in delivering reliable, detail-oriented service and ensuring every home or business we clean meets our high standards of care.</p>
+    <p>NeatNest LLC is a family-owned and operated cleaning company serving Wallingford and nearby communities. We take pride in delivering reliable, detail-oriented service and ensuring every home or business we clean meets our high standards of care.</p>
     <a class="call-btn" href="tel:+12035007034">CALL NOW</a>
   </header>
 
