--- a/index.html
+++ b/index.html
@@ -39,21 +39,23 @@
 
     <img src="images/logo.jpg" alt="NeatNest LLC logo" class="logo" />
     <h1>NeatNest LLC</h1>
-    <p>NeatNest LLC is a family-owned and operated cleaning company serving Wallingford and nearby communities. We take pride in delivering reliable, detail-oriented service and ensuring every home or business we clean meets our high standards of care.</p>
+    <p>NeatNest LLC — family-owned cleaning in Wallingford & nearby communities. Reliable, detail-oriented cleaning services for homes and businesses.</p>
     <a class="call-btn" href="tel:+12035007034">CALL NOW</a>
   </header>
 
   <main>
     <section id="about" class="section">
       <h2>A little bit about us…</h2>
-      <p>We are a small, family-owned house cleaning company dedicated to providing reliable, affordable, and detail-oriented cleaning services. Our team specializes in routine housekeeping, deep cleaning, move-in/move-out cleaning, and commercial cleaning services. With years of experience in the industry, we pride ourselves on our attention to detail and commitment to customer satisfaction.</p>
+<section id="about" class="section">
+  <h2>A little bit about us…</h2>
+  <p>We started NeatNest LLC with one goal in mind: to make every home and office we touch feel fresh, comfortable, and cared for. Our name reflects our belief that a clean space is the heart of a happy home or thriving business. With years of experience, we take pride in ensuring every space meets our high standards of care.</p>
+</section>
     </section>
 
 <section id="services" class="section">
   <h2>Our Services</h2>
 
-  <p>We provide professional cleaning services across Wallingford, Branford, Cheshire, Guilford, East Haven, Middlefield, Durham, Madison, North Haven, and North Branford, CT. Our offerings include routine housekeeping, top-to-bottom deep cleans, move-in/move-out cleaning, office and commercial cleaning, and carpet & upholstery care. No matter where you are in these communities, our team brings attention to detail and a commitment to keeping your space spotless.</p>
-  
+  <p>We provide professional cleaning across Wallingford, Branford, Cheshire, Guilford, East Haven, Middlefield, Durham, Madison, North Haven, and North Branford, CT. Services include routine housekeeping, deep cleans, move-in/move-out cleaning, office and commercial cleaning, and carpet & upholstery care. No matter where you are in these communities, our team brings attention to detail and a commitment to keeping your space spotless.</p>  
   <ul class="services">
     <li data-service="routine">
       <img class="service-logo" src="images/service-logo-bottle.png" alt="Cartoon spray bottle" width="60" height="60">
