Update carpet cleaning description text

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="modal-content">
       <img src="images/service-logo-chair.png" alt="Move In / Move Out Icon" class="service-logo">
       <h3>Carpet & Upholstery Cleaning</h3>
-      <p>Professional steam cleaning for carpets, rugs, and upholstered furniture. Our service includes stain removal, odor treatment, fabric protection application, and deep extraction cleaning that removes dirt, allergens, and bacteria from deep within fibers.</p>
+      <p>Professional cleaning for carpets, rugs, and upholstered furniture. Our service includes stain removal, odor treatment, fabric protection application, and deep extraction cleaning that removes dirt, allergens, and bacteria from deep within fibers.</p>
       <span class="close">&times;</span>
     </div>
   </div>
