Add new testimonials to the slider section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         <div class="slide active">"Michael and his team came to clean my condo and they did an amazing job. I walked in and could smell the cleanliness in the air. The price is very reasonable for what you get. I will definitely be using them again!" — Sarah M.</div>
         <div class="slide">"Mike and his crew are a pleasure to have in our home. The company is run in a businesslike way, with Mike being very professional. They are reliable, friendly, and trustworthy." — Jennifer L.</div>
         <div class="slide">"Top notch attention to detail. I've tried numerous other cleaning services and no one even comes close!" — Nicki B.</div>
+        <div class="slide">"I could not be Happier with the service from Neat Nest LLC. Had a deep cleaning done before the holidays. It was far beyond what I imagined. Rigs, stove,floors,fixtures. Everything. You won’t be disappointed and won’t find a more trust worthy service in your home." - David T.</div>
+        <div class="slide">"Mike and his team came and did a garage clean out  for my husband and I. They cleaned and organized everything, as well as removing all the junk and garbage that was left over! They are a great local company and I would highly recommend them!" - Amber T.</div>
       </div>
       <div class="slider-controls">
         <button id="prev">◀</button>
